# superapp

./: .gitignore  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
apps/superapp/: .env.example  .gitignore  README.md  analysis_options.yaml  l10n.yaml  pubspec.yaml
apps/superapp/lib/: app.dart  main.dart  main_stub.dart  main_web.dart
apps/superapp/test/: smoke_test.dart  widget_test.dart
apps/superapp/web/: index.html
docs/: ARCHITECTURE.md  DEVELOPMENT.md
infra/nginx/: superapp.conf
scripts/: backup.sh  deploy.ps1
services/api_gateway/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api_gateway_test.go  app_handlers.go  auth_handlers.go  fashion_handlers.go  go.mod  go.sum  lpdp_handlers.go  main.go  scholarship_handlers.go  settings_handlers.go  static_data_handlers.go  trade_handlers.go
services/api_gateway/database/: store.go
services/beasiswa_crawler/: .dockerignore  Dockerfile  migrate_to_duckdb.py  pyproject.toml  scheduler_entry.py
services/beasiswa_crawler/data/: country_tips.json  scholarships.duckdb  scholarships.json
services/beasiswa_crawler/src/: __main__.py  config.py  country_tips_db.py  crawler_monitor.py  llm_enrich.py  mcp_server.py  models.py  ner.py  scheduler.py  scraper.py  static_data.py  storage.py  university_db.py
services/mcp_trade/: README.md  pyproject.toml
services/mcp_trade/src/mcp_trade/: __main__.py  _client.py  config.py  daily_reports.py  research_reports.py  server.py
services/vton_proxy/: .dockerignore  Dockerfile  app.py
(+163 files in other folders)
