[project]
name = "beasiswa-scraper"
version = "0.2.0"
description = "Scholarship scraper with MCP server support"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0",
    "schedule>=1.2",
    "pydantic>=2.0",
    "spacy>=3.7",
    "aiohttp>=3.9",
]

[project.scripts]
beasiswa-scrape = "beasiswa_scraper.__main__:run_scrape"
beasiswa-mcp = "beasiswa_scraper.__main__:run_mcp"
beasiswa-scheduler = "beasiswa_scraper.__main__:run_scheduler"

[tool.hatch.build.targets.wheel]
packages = ["src/beasiswa_scraper"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
