[project]
name = "mcp-trade"
version = "0.1.0"
description = "FastMCP server exposing self-trade reports (daily + research) to MCP clients"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0",
    "pydantic>=2.0",
    "aiohttp>=3.9",
]

[project.scripts]
mcp-trade = "mcp_trade.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_trade"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
